# guance-app-demo

./: README.md
mobile_data_sample/log/: log.json
mobile_data_sample/rum/native/: native_action.json  native_error_anr_error.json  native_error_java_crash.json  native_error_native_crash.json  native_error_network.json  native_longtask.json  native_resource.json  native_view.json
mobile_data_sample/rum/webview/: webview_action.json  webview_error.json  webview_longtask.json  webview_resource_doc.json  webview_resource_xhr.json  webview_view.json
src/: .gitignore
src/android/demo/: .gitignore  build.gradle  gradle.properties
src/android/demo/app/: build.gradle  proguard-rules.pro
src/android/demo/nativelib/: build.gradle
src/harmonyos/demo/: .gitignore  README.md  build-profile.json5  oh-package.json5
src/harmonyos/demo/AppScope/: app.json5
src/harmonyos/demo/entry/: build-profile.json5  oh-package.json5
src/harmonyos/demo/entry/src/main/cpp/: CMakeLists.txt  CrashTest.cpp  CrashTest.h  ft_crash_napi.cpp
src/harmonyos/demo/libs/: ft_native.har  ft_native_crash.har  ft_sdk.har  ft_sdk_ext.har  otel_sdk.har
src/ios/demo/: .gitignore  Config-Demo.develop.xcconfig  Config-Demo.pre.xcconfig  Config-Demo.release.xcconfig  FTdSYMUploader.sh  GuanceExtension.entitlements  Podfile
src/ios/demo/FTSDKDemo.xcodeproj/: project.pbxproj
src/server/: README.md  app.py  update_input_value.py
src/server/data/: products.json
src/server/static/: dataflux-rum.js
src/server/templates/: import_helper.html  index.html  product.html
(+204 files in other folders)
